working through user authentication and created on server in mongodb

--- a/client/.env
+++ b/client/.env
@@ -1,4 +1,4 @@
-MONGODB_URI=mongodb+srv://wilcoyonkin:AOccXseyWbkyZhIt@anirate.mx7t5zp.mongodb.net/?retryWrites=true&w=majority&appName=AniRate
+MONGODB_URI=mongodb+srv://wilcoyonkin:AOccXseyWbkyZhIt@AniRate.mx7t5zp.mongodb.net/?retryWrites=true&w=majority&appName=AniRate
 VITE_AUTH0_DOMAIN=dev-jkly4ia4zrmtofzn.us.auth0.com
 VITE_AUTH0_CLIENT_ID=j1kuPZbzqG39OyR4SS2njWF4djStNUhr
 AUTH0_DOMAIN=dev-jkly4ia4zrmtofzn.us.auth0.com
