--- a/client/.env
+++ b/client/.env
@@ -1,6 +1,8 @@
 MONGODB_URI=mongodb+srv://wilcoyonkin:AOccXseyWbkyZhIt@AniRate.mx7t5zp.mongodb.net/?retryWrites=true&w=majority&appName=AniRate
 VITE_AUTH0_DOMAIN=dev-jkly4ia4zrmtofzn.us.auth0.com
 VITE_AUTH0_CLIENT_ID=j1kuPZbzqG39OyR4SS2njWF4djStNUhr
+VITE_AUTH0_AUDIENCE=https://anirate.api
+AUTH0_AUDIENCE=https://anirate.api
 AUTH0_DOMAIN=dev-jkly4ia4zrmtofzn.us.auth0.com
 AUTH0_AUDIENCE=https://anirate.api
 PORT=5173
