--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.4.0",
+    "axios": "^1.11.0",
     "dotenv": "^17.2.1",
     "mongodb": "^6.18.0",
     "mongoose": "^8.17.2",
